Adding HelloWorld project to test CCScale9SpriteEx.

--- a/cocos2dx/proj.win32/cocos2d.vcproj
+++ b/cocos2dx/proj.win32/cocos2d.vcproj
@@ -924,6 +924,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\textures\CCTexture2DBlock.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\textures\CCTexture2DBlock.h"
+				>
+			</File>
+			<File
 				RelativePath="..\textures\CCTextureAtlas.cpp"
 				>
 			</File>
