--- a/samples/HelloCpp/proj.win32/HelloCpp.vcxproj.filters
+++ b/samples/HelloCpp/proj.win32/HelloCpp.vcxproj.filters
@@ -31,5 +31,13 @@
     <ClInclude Include="main.h">
       <Filter>win32</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>win32</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="LuaHostWin32.rc">
+      <Filter>win32</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
