--- a/plugin/analytics/.classpath
+++ b/plugin/analytics/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="libs/android/umeng_sdk.jar"/>
-	<classpathentry kind="lib" path="libs/android/FlurryAgent.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/android/umeng_sdk.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/android/FlurryAgent.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
