--- a/HelloAnalytics/proj.android/AndroidManifest.xml
+++ b/HelloAnalytics/proj.android/AndroidManifest.xml
@@ -50,7 +50,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_LOGS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
-
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <!-- Permission for Unit Test -->
     <uses-permission android:name="android.permission.GET_TASKS" />
 </manifest> 
