Only to be done is to send msg from sub thread to main thread.

--- a/tools/tojs/cocos2dx.ini
+++ b/tools/tojs/cocos2dx.ini
@@ -72,8 +72,8 @@ skip = CCNode::[.*Transform convertToWindowSpace getChildren ^setPosition$ getGr
 		CCSchedulerScriptHandlerEntry::[*],
 		CCSize::[*],
 		CCPoint::[*],
+		CCPointArray::[*],
 		CCRect::[*],
-		CCSize::[*],
 		CCString::[*],
 		CCDictionary::[*],
 		CCArray::[*],
